--- a/typescript-base-mk/03/使用 TypeScript 编写爬虫工具/package.json
+++ b/typescript-base-mk/03/使用 TypeScript 编写爬虫工具/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc -w",
     "dev": "ts-node ./src/crowller.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
